tests/pass/array_index_basic.lum
a = [10, 20, 30]
__emit(a[0], true, false)
__emit(a[2], true, false)
