tests/fail/array_index_non_array.lum
value = 10
__emit(value[0], true, false)
